# python-sdk

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
scanlyser/: __init__.py  client.py  types.py  webhooks.py
scanlyser/errors/: __init__.py
scanlyser/resources/: issues.py  pages.py  reports.py  scans.py  sites.py  teams.py
tests/: helpers.py  test_errors.py  test_scans.py  test_sites.py  test_webhooks.py
