[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scanlyser-sdk"
version = "1.0.0"
description = "Python SDK for the ScanLyser API — accessibility, SEO, performance, UX, and security scanning."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ScanLyser", email = "hello@scanlyser.app" }]
keywords = ["scanlyser", "accessibility", "wcag", "seo", "performance", "ux", "security", "api", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://scanlyser.app"
Repository = "https://github.com/scanlyser/python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["scanlyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
